Scenario-RBAC-1-SA-On-Workloads-Resources-Restrictions/deny_all_greeting_client_ns.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: deny-all-greetings-client
  namespace: greetings-client  
spec:
  {}
