Scenario-RBAC-1-SA-On-Workloads-Resources-Restrictions/sc1b-deny_sa-based_greeting_client_ns.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: deny-sa-greetings-client
  namespace: greetings-client  
spec:
  rules:
    - from:
        - source:
            principals:
              - >-
                cluster.local/ns/<istio-system-test-2>/sa/istio-ingressgateway-service-account
      to:
        - operation:
            methods:
              - GET
            paths:
              - /say/goodday-to*
  action: DENY
